# code-tools

./: .env.example  .env.template  .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  README-LOCAL-CLAUDE.md  README-STAGING.md  README.md  docker-compose.databases.yml  docker-compose.yml  gemini-cli.js  llm-cli.js  llmv2.tech.spec.md  ollama-cli.js  package-lock.json  package.json  prompt.md  remove-mcp.sh  setup-claude-local.sh  setup-mcp-phase2.sh  setup-mcp-phase3-docker.sh  setup.sh  test-llm-cli.js  test.txt  tsconfig.json  vitest.config.js
.claude-template/: .mcp.json  CLAUDE.md  README-CLAUDE.md  docker-compose.yml  settings.json
backup/memories/: claude-memories-backup-20250817.json
claude-code-transfer-kit/: README.md
claude-code-transfer-kit/scripts/: setup-mcp-ecosystem.sh  test-mcp-connections.sh
claude-code-transfer-kit/templates/: .gitignore.template  .mcp.json.template  CLAUDE.md
config/qdrant/: production.yaml
config/redis/: redis-production.conf
docker/compose/: docker-compose.databases.yml  docker-compose.dev.yml  docker-compose.yml
docker/configs/: nginx.conf  prometheus.yml  redis.conf
docker/scripts/: docker-db-start.sh  docker-db-status.sh  docker-db-stop.sh  docker-logs.sh  docker-reset.sh  docker-start.sh  docker-stop.sh
docs/: CLAUDE.md  MCP-plan.md  mcp-quick-reference.md  mcp-setup.md  memory-graph.html  neo4j-troubleshooting.md
lib/: constants.js  file-processor.js  mcp-manager.js
mcp/: servers.json  setup-mcp.sh
mcp/configs/: .mcp.json  .mcp.json.example  mcp-servers.json
mcp/setup/: setup-mcp.sh  setup-qdrant-mcp.sh
mcp/tools/: mcp-tools.html  test-mcp.sh  troubleshoot-mcp.sh
scripts/: backup-all-databases.sh  build-staging.sh  migrate-memory-to-neo4j.js  neo4j-backup.sh  neo4j-restore.sh  package.json  restore-memories.sh
sql/: create_llm_test_results_table.sql  create_tech_specs_table.sql  insert_tech_spec.sql
src/: gemini-cli.js  index.ts  knowledge-fusion.js  semantic-engine.js
src/commands/: IndexCommand.ts  InfoCommand.ts  PromptCommand.ts  SearchCommand.ts
src/core/: CLIApp.ts  Config.ts  Logger.ts  constants.ts  errors.ts
src/knowledge/: KnowledgeIndexer.ts  SemanticSearch.ts
src/mcp/: MCPClient.ts  MCPManager.ts  MCPTools.ts
src/providers/: AnthropicProvider.ts  GeminiProvider.ts  LLMProvider.ts  LLMProviderManager.ts  OllamaProvider.ts  OpenAIProvider.ts
src/types/: index.ts
test/: evaluation-results.json  gemini-2.0-flash-result-fixed.json  gemini-2.0-flash-result.json  generate-html-report.js  llm-evaluation-report.html  llm-evaluation-system.js  ollama-gpt-oss-result.json  ollama-qwen-coder-result.json
tools/: Cargo.toml  README.md  build.sh  chunk  crypto  fs-fast  http  llm  postgres  qdrant  redis  test_neo4j_api.rs
tools/.cargo/: config.toml
tools/src/: lib.rs
tools/src/connectors/: mod.rs
tools/src/shared/: cli.rs  error.rs  mod.rs  output.rs
tools/tests/: integration.rs
(+22 files in other folders)
