[package]
name = "code-tools-connectors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fs-fast"
path = "bin/fs-fast.rs"

[[bin]]
name = "qdrant"
path = "bin/qdrant.rs"

[[bin]]
name = "neo4j"
path = "bin/neo4j.rs"

[[bin]]
name = "postgres"
path = "bin/postgres.rs"

[[bin]]
name = "benchmark"
path = "bin/benchmark.rs"

[[bin]]
name = "llm"
path = "bin/llm.rs"

[dependencies]
# Shared dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = "1.7"

# fs-fast specific
rayon = "1.8"
memmap2 = "0.9"
walkdir = "2.4"

# Qdrant specific
qdrant-client = { version = "1.7", features = ["serde"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }

# Neo4j specific
neo4rs = "0.7"

# PostgreSQL specific
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.12"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# LLM tool specific
reqwest = { version = "0.11", features = ["json", "stream"] }
regex = "1.10"
dotenv = "0.15"
async-trait = "0.1"
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true