[package]
name = "code-tools-connectors"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chunk"
path = "src/bin/chunk.rs"

[dependencies]
# Shared dependencies
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
uuid = "1.7"

# fs-fast specific
rayon = "1.8"
memmap2 = "0.9"
walkdir = "2.4"

# Qdrant specific
qdrant-client = { version = "1.7", features = ["serde"] }
tonic = { version = "0.11", features = ["tls", "tls-roots"] }

# Neo4j specific
neo4rs = "0.7"

# PostgreSQL specific
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.12"

# Redis specific
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# HTTP and LLM tools specific
reqwest = { version = "0.11", features = ["json", "stream", "cookies", "multipart"] }
regex = "1.10"
dotenv = "0.15"
async-trait = "0.1"
atty = "0.2"

# HTTP tool specific
base64 = "0.22"
url = "2.5"
futures = "0.3"

# Crypto tool specific
jsonwebtoken = "9.3"
bcrypt = "0.15"
sha2 = "0.10"
sha3 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hex = "0.4"
rand = "0.8"
getrandom = "0.2"
urlencoding = "2.1"

# Text chunking tool specific
unicode-segmentation = "1.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true